fix some artwork alignment issues between showing text and not showing text
git-svn-id: file:///home/awy/mirror/slim/trunk/server@11774 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/skin.css
+++ b/HTML/Fishbone/skin.css
@@ -192,10 +192,12 @@ div#pagetitle {
 
 .artworkControls {
 	padding: 0px;
+	margin: 0px;
 }
 
 .artworkControls img {
-	margin-left: 2px;
+	margin-left: 1px;
+	margin-right: 1px;
 	padding-top: 2px;
 }
 
@@ -204,6 +206,8 @@ div#pagetitle {
 	overflow: hidden;
 	color: #999;
 	display: none;
+	margin: 0px;
+	padding 0px;
 	padding-bottom: 5px;
 }
 
